--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <nav>
             <h4>Quer saber mais sobre Recife e seus pontos turísticos?</h4>
             <ul type="square">
+                <li><a href="praias.html">Praias</a><img src="img/praia.png" alt="Praias"></li>
                 <li>Onde ficar <img src="img/hotel.png" alt="Hotéis"></li>
                 <li>Como chegar <img src="img/mapa.png" alt="Mapa"></li>
-                <li>Praias <img src="img/praia.png" alt="Praias"></li>
                 <li>Transportes <img src="img/transporte.png" alt="Transportes"></li>
                 <li>Onde comer <img src="img/restaurante.png" alt="Restaurantes"></li>
             </ul>
